--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.1
 Django==4.0.4 *1
+Pillow==9.1.0 *2
 pip==22.0.4
 setuptools==62.1.0
+sorl-thumbnail==12.8.0 *3
 sqlparse==0.4.2
 tzdata==2022.1
 wheel==0.37.1
